@@ -1,3 +1,8 @@
+2007-02-04  Brandon Hale  <brandon@ubuntu.com>
+
+	* src/VolumeButton.cs, src/PlayerWindow.cs:
+	Update the volume widget from Aaron, set the relief to normal
+
 2007-02-03  Brandon Hale  <brandon@ubuntu.com>
 
 	* src/VolumeButton.cs, src/PlayerWindow.cs:
